load more button and fixed errors

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   </header>
 
     <!-- Main Grid Section -->
-    <div class="main" id = "grid-cards"></div>
+  <div class="main" id = "grid-cards"></div>
+
+  <div id="loadMoreBtn-container"></div>
+</div>
 
   <script src="miracles.js"></script>
-
-  </main>
-</div>
 </body>
 </html>
