load more button and fixed errors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </header>
 
     <!-- Main Grid Section -->
-  <div class="main" id = "grid-cards"></div>
+  <div class="main" id = "grid-cards">
+    <div class = "details"></div>
+  </div>
 
   <div id="loadMoreBtn-container"></div>
 </div>
