--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
   </header>
 
     <!-- Main Grid Section -->
-  <div class="main" id = "grid-cards">
-    <div class = "details"></div>
-  </div>
+  <div class="main" id = "grid-cards"></div>
 
   <div id="loadMoreBtn-container"></div>
 </div>
